--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1202,8 +1202,6 @@ Use case ends.
 .  Should be able to hold up to 1000 tasks without a noticeable sluggishness in performance for typical usage.
 .  A user with above average typing speed for regular English text (i.e. not code, not system admin commands) should be able to accomplish most of the tasks faster using commands than using the mouse.
 
-_{More to be added}_
-
 [appendix]
 == Glossary
 
@@ -1251,34 +1249,108 @@ These instructions only provide a starting point for testers to work on; testers
 
 .. Download the jar file and copy into an empty folder
 .. Double-click the jar file +
-   Expected: Shows the GUI with a set of sample contacts. The window size may not be optimum.
+   Expected: Shows the GUI with the dashboard. The window size is optimum to view the dashboard
+entirely.
 
-. Saving window preferences
+. Altering window preferences
 
 .. Resize the window to an optimum size. Move the window to a different location. Close the window.
 .. Re-launch the app by double-clicking the jar file. +
-   Expected: The most recent window size and location is retained.
+   Expected: If the window size is less than the minimum, it will be re-sized automatically. Else, the window
+preferences will be retained.
 
-_{ more test cases ... }_
+=== Task commands
 
-=== Deleting a task
-
-. Deleting a task while all tasks are listed
+. Deleting a task
 
 .. Prerequisites: List all tasks using the `list-tasks` command. Multiple tasks in the list.
-.. Test case: `delete-task 1` +
-   Expected: First contact is deleted from the list. Details of the deleted contact shown in the status message. Timestamp in the status bar is updated.
-.. Test case: `delete-task 0` +
+.. Test case: `delete-task ti/1` +
+   Expected: First task is deleted from the list. Details of the deleted task shown in the status message. Timestamp in the status bar is updated.
+.. Test case: `delete-task ti/0` +
    Expected: No task is deleted. Error details shown in the status message. Status bar remains the same.
-.. Other incorrect delete commands to try: `delete-task`, `delete-task x` (where x is larger than the list size) _{give more}_ +
+.. Other incorrect delete commands to try: `delete-task`, `delete-task ti/x` (where x is larger than the list size) +
    Expected: Similar to previous.
 
-_{ more test cases ... }_
+. Editing a task
+
+.. Prerequisites: List all tasks using the `list-tasks` command. Multiple tasks in the list. Third task has no deadline.
+.. Test case: `edit-task ti/1 tn/New name` +
+Expected: First task name is changed to "New name". Details of the edited task shown in the status message.
+.. Test case: `edit-task ti/3 at/10-10-2025 19:00` +
+Expected: Third task is not edited. Error details shown in the status message.
+.. Other incorrect edit commands to try: `edit-task ti/1`, `edit-task ti/x` (where x is larger than list size)
+
+. Setting a deadline for a task
+
+.. Prerequisites: List all tasks using the `list-tasks` command. Multiple tasks in the list. First task has a deadline, third task has no deadline.
+.. Test case: `set-deadline ti/1 at/12-12-2020 19:00` +
+Expected: Deadline is set for the task. Details of the task shown in the status message.
+.. Test case: `set-deadline ti/3 at/13-10-2031 18:00` +
+Expected: Deadline not set for third task. Error details shown in the status message.
+.. Other incorrect set deadline commands to try: `set-deadline ti/1 at/10/10/2020`. `set-deadline ti/x at/10-10-2020 10:00` (where x is larger than list size)
+`set-deadline ti/2 at/time` (where time refers to a date in the past).
+
+
+. Completing a task
+
+.. Prerequisite: List all tasks using the `list-tasks` command. Multiple tasks in the list, second task with status `doing` and has deadline in less than two week.
+Third task has status `done`.
+.. Test case: `done-task ti/2` +
+Expected: Second task status is changed to `done`. Deadline is removed as well.
+.. Test case: `done-task ti/3` +
+Expected: Third task status is unchanged. Error details shown in the status message.
+
+=== Dashboard feature
+
+Test any commands related to manipulating `Task` and `Meeting` data, changes should be reflected in the dashbaord.
+
+. Navigating to the dashboard
+
+.. Prerequisites: Start at a different view of +Work.
+.. Test case: `home` +
+Expected: View is switched to dashboard.
+.. Test case: `hom` +
+Expected: View is not changed. Error details shown in the status message.
+
+. Viewing task data in the dashboard
+
+.. Prerequisites: View initial state of dashboard.
+.. Test case: Perform test 3b in <<Task>>.
+Expected: Task is removed from upcoming deadlines list and is moved to the `done` column of the dashboard.
+
+=== Settings feature
+
+. Navigating to the settings panel
+
+.. Prerequisites: Start at a different view of +Work.
+.. Test case: `settings` +
+Expected: View is switched to settings panel.
+.. Test case: `settin` +
+Expected: View is not changed. Error details shown in the status message.
+
+. Changing the theme of +Work
+
+.. Prerequisites: Current theme is the `dark`.
+.. Test case: `theme light` +
+Expected: +Work theme changes to light.
+.. Test case: `theme yellow` +
+Expected: +Work theme is not changed. Error details shown in the status message.
+.. Other incorrect theme commands to try: `theme x` (Where x is not `light` or `dark`).
+
+. Changing the time format of +Work.
+
+.. Prerequisites: Current time format is 24 hour clock.
+.. Test case: `clock twelve` +
+Expected: +Work time format changed to 12 hour clock. Switch view to task list to confirm.
+.. Test case: `clock ten` +
+Expected: +Work time format is not changed. Error details shown in the status message.
+.. Other incorrect theme commands to try: `clock x` (Where x is not `twelve` or `twenty_four`).
 
 === Saving data
 
 . Dealing with missing/corrupted data files
 
-.. _{explain how to simulate a missing/corrupted file and the expected behavior}_
-
-_{ more test cases ... }_
+.. Prerequisites: Clone the repo and delete the `plusworksettings` and `projectdashboard` (under data  folder) json files. Launch the application.
+.. Test case: Perform valid operations.
+.. Expected outcome: New data is saved and the previously missing `plusworksettings` and `projectdashboard` json files are created
+and contain the updated data.
