--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -33,7 +33,7 @@ The *_Architecture Diagram_* given above explains the high-level design of the A
 The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/pluswork/MainApp.java[`MainApp`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -85,7 +85,7 @@ further explained using a separate diagram.
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/src/main/java/seedu/pluswork/ui/Ui.java[`Ui.java`]
 
 
 ==== Functionality of `UserViewMain`
@@ -109,6 +109,9 @@ Step 3: `UserViewMain` interacts with `UserViewNavigator`, which obtains the
 relevant data from `Logic`, to create the relevant `UiPart`. These `UiPart` components are the `MemberListPanel`,
 `ProjectDashBoardView` etc.
 
+[NOTE]
+The non-static `UiPart` components are stored in link:{repoURL}/src/main/java/seedu/pluswork/ui/views[`views`] folder.
+
 Step 4: This component is then passed to `UserViewController` to set the current view of
 `UserViewMain` component.
 
@@ -116,7 +119,7 @@ Step 5: Users view is then switched successfully.
 
 
 
-The `UI` component uses the JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
+The `UI` component uses the JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/pluswork/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
 
 The `UI` component,
 
@@ -132,7 +135,7 @@ The `UI` component,
 image::LogicClassDiagram.png[]
 
 *API* :
-link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/seedu/pluswork/logic/Logic.java[`Logic.java`]
 
 .  `Logic` uses the `ProjectDashboardParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
@@ -154,7 +157,7 @@ NOTE: The lifeline for `DeleteTaskCommandParser` should end at the destroy marke
 .Structure of the Model Component
 image::ModelClassDiagramNew.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/seedu/pluswork/model/Model.java[`Model.java`]
 
 The `Model`,
 
